feat(server): add private orb setup api
